--- a/app/src/main/res/layout/activity_admin_res_detalles_producto.xml
+++ b/app/src/main/res/layout/activity_admin_res_detalles_producto.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/bg_color"
     tools:context=".activity.adminRes.AdminResDetallesProductoActivity">
 
-    <!-- Header con botón de regresar y título -->
-    <LinearLayout
-        android:id="@+id/header"
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="12dp">
+        android:padding="12dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Botón de regresar (flecha) -->
         <Button
-            style="?attr/materialIconButtonFilledTonalStyle"
             android:id="@+id/btnBack"
+            style="?attr/materialIconButtonFilledTonalStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon="@drawable/baseline_arrow_back_ios_new_24"
             android:contentDescription="@string/btnBack"
-            android:backgroundTint="@color/bg_color"/>
+            app:icon="@drawable/baseline_arrow_back_ios_new_24"
+            android:backgroundTint="@color/bg_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-
-        <TextView
-            android:id="@+id/nombreProducto"
+        <Button
+            android:id="@+id/btnEditar"
+            style="?attr/materialIconButtonFilledStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nombre del producto"
-            android:textSize="22sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/sen_font">
-        </TextView>
-    </LinearLayout>
+            android:contentDescription="Editar"
+            app:icon="@drawable/ic_edit"
+            android:backgroundTint="@color/btn_medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollViewContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="0dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
+        app:layout_constraintBottom_toTopOf="@id/btnEliminar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +60,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="12dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp">
 
@@ -67,7 +72,7 @@
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewPagerImages"
                         android:layout_width="match_parent"
-                        android:layout_height="280dp"/>
+                        android:layout_height="250dp"/>
 
                     <!-- Overlay gradiente en la parte inferior -->
                     <View
@@ -110,105 +115,105 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:id="@+id/nombreProducto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nombre del producto"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginVertical="20dp"
+                android:layout_marginHorizontal="12dp">
+            </TextView>
+
             <!-- Contenido del producto -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingHorizontal="18dp"
+                android:layout_marginBottom="18dp">
 
                 <!-- Descripción del producto -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Descripción:"
-                    android:textSize="20sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
-                    android:fontFamily="@font/sen_font"
-                    android:paddingHorizontal="18dp"/>
+                    android:textColor="@color/black"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/sen_font"/>
 
                 <!-- Descripción del producto -->
                 <TextView
                     android:id="@+id/tvDescripcionProduct"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="6dp"
-                    android:padding="18dp"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="14sp"
                     android:text="La Classic Burger es una jugosa hamburguesa de res a la parrilla, servida en un pan brioche suave, con queso cheddar derretido, lechuga fresca, tomate, cebolla caramelizada y una salsa especial de la casa."
                     android:textAlignment="viewStart"
                     android:textAllCaps="false"/>
 
-                <!-- Contenedor del precio -->
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="18dp"
-                    android:gravity="center_vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Precio:"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/sen_font"/>
-
-                    <TextView
-                        android:id="@+id/productDetailPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="S/. 32"
-                        android:textColor="@android:color/black"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
-                        android:paddingStart="10dp"/>
-                </LinearLayout>
-
-
-                <!-- Botón para EDITAR -->
-                <Button
-                    android:id="@+id/btnEditar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="EDITAR"
-                    android:textSize="18sp"
+                    android:text="Categoría:"
+                    android:textSize="14sp"
                     android:textStyle="bold"
-                    android:textColor="@android:color/holo_red_light"
-                    app:strokeWidth="1dp"
-                    app:strokeColor="@android:color/holo_red_light"
-                    android:backgroundTint="@android:color/white"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="10dp"
-                    android:padding="16dp"
-              />
+                    android:fontFamily="@font/sen_font"
+                    android:layout_marginBottom="8dp"/>
 
-                <!-- Botón para ELIMINAR -->
-                <Button
-                    android:id="@+id/btnEliminar"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/productCategory"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginBottom="16dp"
-                    android:backgroundTint="@android:color/holo_red_light"
-                    android:padding="16dp"
-                    android:text="ELIMINAR"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:text="Bebida"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp"
+                    android:layout_marginBottom="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Precio unitario:"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/sen_font"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:id="@+id/productDetailPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S/. 32"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
 
             </LinearLayout>
+
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/progressIndicator"
-        android:layout_width="wrap_content"
+    <!-- Botón para ELIMINAR -->
+    <Button
+        android:id="@+id/btnEliminar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:layout_margin="24dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:padding="14dp"
+        android:text="ELIMINAR"
+        android:fontFamily="@font/sen_font"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
