--- a/app/src/main/res/layout/activity_admin_res_home.xml
+++ b/app/src/main/res/layout/activity_admin_res_home.xml
@@ -39,13 +39,13 @@
 
         <!-- Icono de notificaciones -->
         <Button
-            android:id="@+id/btnNotifications"
+            android:id="@+id/btnPedidos"
             style="?attr/materialIconButtonFilledStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/btn_medium"
-            android:contentDescription="Notificaciones"
-            app:icon="@drawable/ic_notifications" />
+            android:contentDescription="Pedidos"
+            app:icon="@drawable/rounded_orders_24" />
     </LinearLayout>
 
     <!-- Parte scrolleable -->
@@ -58,13 +58,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="16dp">
+            android:paddingHorizontal="10dp"
+            android:paddingBottom="16dp">
 
             <TextView
                 android:id="@+id/tvWelcome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="16dp"
+                android:paddingHorizontal="6dp"
                 android:text="@string/welcome"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
@@ -87,137 +89,145 @@
                 android:text="@string/nameRest"
                 android:fontFamily="@font/sen_font"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginVertical="18dp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Descripción:"
-                android:fontFamily="@font/sen_font"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_marginBottom="4dp"/>
-
-            <TextView
-                android:id="@+id/descripcionRestaurant"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/descripcionRest"
-                android:textSize="14sp"
-                android:textAlignment="viewStart"
-                android:layout_marginBottom="18dp"/>
-
-            <!-- Información de contacto  -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Contacto:"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:fontFamily="@font/sen_font"
-                android:layout_marginBottom="4dp"/>
-
-            <!-- locacion -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/ic_location"
-                    app:tint="@color/btn_dark"/>
-
-                <TextView
-                    android:id="@+id/tvRestaurantAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2118 Thornridge Cir. Syracuse"
-                    android:layout_marginStart="8dp" />
-            </LinearLayout>
-
-            <!-- numero -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginBottom="18dp">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/ic_call"
-                    app:tint="@color/btn_dark"/>
-
-                <TextView
-                    android:id="@+id/tvRestaurantTelef"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="990857621"
-                    android:layout_marginStart="8dp" />
-            </LinearLayout>
-
-            <!-- opciones -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginVertical="16dp">
+                android:paddingHorizontal="6dp">
 
-                <Button
-                    android:id="@+id/btnCarta"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginBottom="12dp"
-                    android:background="@drawable/search_view_bg"
-                    android:paddingHorizontal="40dp"
-                    app:backgroundTint="@color/bg_gray_light"
-                    android:text="@string/btnCarta"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:layout_height="wrap_content"
+                    android:text="Descripción:"
                     android:fontFamily="@font/sen_font"
-                    app:icon="@drawable/menu"
-                    app:iconTint="#000000"
-                    app:iconSize="35dp"/>
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginBottom="4dp"/>
 
-                <Button
-                    android:id="@+id/btnPedidos"
+                <TextView
+                    android:id="@+id/descripcionRestaurant"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginBottom="12dp"
-                    android:background="@drawable/search_view_bg"
-                    android:paddingHorizontal="40dp"
-                    app:backgroundTint="@color/bg_gray_light"
-                    android:text="@string/btnPedidos"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/sen_font"
-                    app:icon="@drawable/list"
-                    app:iconTint="#000000"
-                    app:iconSize="35dp" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/descripcionRest"
+                    android:textSize="14sp"
+                    android:textAlignment="viewStart"
+                    android:layout_marginBottom="18dp"/>
 
-                <Button
-                    android:id="@+id/btnReporte"
+                <!-- Información de contacto  -->
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@drawable/search_view_bg"
-                    android:paddingHorizontal="40dp"
-                    app:backgroundTint="@color/bg_gray_light"
-                    android:text="@string/btnReporte"
+                    android:layout_height="wrap_content"
+                    android:text="Contacto:"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
                     android:fontFamily="@font/sen_font"
-                    app:icon="@drawable/report"
-                    app:iconSize="35dp"
-                    app:iconTint="#000000"/>
+                    android:layout_marginBottom="4dp"/>
+
+                <!-- locacion -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_location"
+                        app:tint="@color/btn_dark"/>
+
+                    <TextView
+                        android:id="@+id/tvRestaurantAddress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2118 Thornridge Cir. Syracuse"
+                        android:layout_marginStart="8dp" />
+                </LinearLayout>
+
+                <!-- numero -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="14dp">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_call"
+                        app:tint="@color/btn_dark"/>
+
+                    <TextView
+                        android:id="@+id/tvRestaurantTelef"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="990857621"
+                        android:layout_marginStart="8dp" />
+                </LinearLayout>
+
+                <!-- opciones -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginVertical="16dp">
+
+                    <Button
+                        android:id="@+id/btnCarta"
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:layout_marginBottom="12dp"
+                        android:background="@drawable/search_view_bg"
+                        android:paddingHorizontal="40dp"
+                        app:backgroundTint="@color/bg_gray_light"
+                        android:text="@string/btnCarta"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/sen_font"
+                        app:icon="@drawable/menu"
+                        app:iconTint="#000000"
+                        app:iconSize="35dp"/>
+
+<!--                    <Button-->
+<!--                        android:id="@+id/btnPedidos"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="80dp"-->
+<!--                        android:layout_marginBottom="12dp"-->
+<!--                        android:background="@drawable/search_view_bg"-->
+<!--                        android:paddingHorizontal="40dp"-->
+<!--                        app:backgroundTint="@color/bg_gray_light"-->
+<!--                        android:text="@string/btnPedidos"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="18sp"-->
+<!--                        android:fontFamily="@font/sen_font"-->
+<!--                        app:icon="@drawable/list"-->
+<!--                        app:iconTint="#000000"-->
+<!--                        app:iconSize="35dp" />-->
+
+                    <Button
+                        android:id="@+id/btnReporte"
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:background="@drawable/search_view_bg"
+                        android:paddingHorizontal="40dp"
+                        app:backgroundTint="@color/bg_gray_light"
+                        android:text="@string/btnReporte"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/sen_font"
+                        app:icon="@drawable/report"
+                        app:iconSize="35dp"
+                        app:iconTint="#000000"/>
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
