--- a/app/src/main/res/layout/activity_repartidor_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_repartidor_editar_perfil.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/bg_color"
-    tools:context=".activity.cliente.ClienteEditarPerfilActivity">
+    tools:context=".activity.repartidor.RepartidorEditarPerfilActivity">
+
 
     <!-- Header -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -251,5 +252,4 @@
                 android:textStyle="bold"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </LinearLayout>
