--- a/app/src/main/res/layout/activity_super_admin_agregar_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_agregar_restaurante.xml
@@ -75,19 +75,34 @@
                         android:backgroundTint="@color/btn_light"
                         android:background="@drawable/rounded_corners"
                         android:layout_marginHorizontal="6dp"
-                        android:layout_marginBottom="8dp"/>
+                        android:layout_marginBottom="8dp" />
 
                     <!-- Botón para seleccionar imagen -->
                     <ImageView
-                        android:id="@+id/iconCamera"
+                        android:id="@+id/btnImagen"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="bottom|end"
                         android:src="@drawable/ic_camara"
                         android:background="@drawable/rounded_corners"
                         android:backgroundTint="@color/btn_medium"
-                        android:padding="8dp"/>
+                        android:padding="8dp" />
+
+                    <!-- Botón para eliminar imagen -->
+                    <ImageView
+                        android:id="@+id/btnEliminarImagen"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="top|end"
+                        android:layout_margin="8dp"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_close"
+                        android:background="@drawable/rounded_corners"
+                        android:backgroundTint="@color/btn_medium"
+                        android:padding="4dp"
+                        app:tint="@android:color/white" />
                 </FrameLayout>
+
 
             </LinearLayout>
 
